# pyzdcf

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/API-docs/: API.rst
docs/Examples/: examples.ipynb
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/API-docs/: API.doctree
docs/_build/doctrees/pyZDCF/: pyZDCF.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/API-docs/: API.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/pyZDCF/: pyZDCF.html
docs/pyZDCF/: pyZDCF.rst
notebooks/: examples.ipynb
notebooks/.ipynb_checkpoints/: examples-checkpoint.ipynb
pyzdcf/: __init__.py  pyzdcf.py
tests/essential/: test_MC_lc1.py  test_MC_lc2.py  test_MC_lc3.py  test_acf_lc1.py  test_acf_lc2.py  test_acf_lc3.py  test_ccf_lc1.py  test_ccf_lc2.py  test_ccf_lc3.py
tests/test_data/test_lc1/: acfFF1.dcf  acfFF1_b1.dcf  acfFF1_b20.dcf  acfFF1_b500.dcf  acfFF1_b6.dcf  acfFT1_b1.dcf  acfFT1_b20.dcf  acfFT1_b21.dcf  acfFT1_b5.dcf  acfFT1_b500.dcf  acfFT1_b6.dcf  acfFT3.dcf  acfTF1.dcf  acfTF1_b1.dcf  acfTF1_b21.dcf  acfTF1_b5.dcf  acfTF1_b500.dcf  acfTF1_b6.dcf  acfTT1.dcf  acfTT1_b20.dcf  acfTT1_b21.dcf  acfTT1_b5.dcf  acfTT1_b500.dcf  acfTT1_b6.dcf  ccfFF1_b21.dcf  ccfFF1_b5.dcf  ccfFF1_b500.dcf  ccfFF3.dcf  ccfFT1.dcf  ccfFT1_b21.dcf  ccfFT1_b5.dcf  ccfFT1_b500.dcf  ccfTF1.dcf  ccfTT1_b1.dcf  ccfTT1_b20.dcf  ccfTT1_b500.dcf  ccfTT1_b6.dcf  ccfTT3.dcf  lcx_1000  lcy_1000
tests/test_data/test_lc1/results_py/: acfFF1_test.dcf  acfFF3_test.dcf  acfFT1_test.dcf  acfFT3_test.dcf  acfTF1_test.dcf  acfTF3_test.dcf  acfTT1_test.dcf  acfTT3_test.dcf  ccfFF1_test.dcf  ccfFF3_test.dcf  ccfFT1_test.dcf  ccfFT3_test.dcf  ccfTF1_test.dcf  ccfTF3_test.dcf  ccfTT1_test.dcf  ccfTT3_test.dcf  ccf_test.dcf
tests/test_data/test_lc2/: acfFF1.dcf  acfFF3.dcf  acfFT1.dcf  acfFT3.dcf  acfTF1.dcf  acfTF3.dcf  acfTT1.dcf  acfTT3.dcf  ccfFF1.dcf  ccfFF3.dcf  ccfFT1.dcf  ccfFT3.dcf  ccfTF3.dcf  ccfTT1.dcf  lcx_3500  lcy_3500
tests/test_data/test_lc2/results_py/: acfFF1_test.dcf  acfFF3_test.dcf  acfFT1_test.dcf  (+11 more)
tests/test_data/test_lc3/: acfFF1.dcf  acfFF3.dcf  acfFT1.dcf  acfFT3.dcf  acfTF1.dcf  acfTF3.dcf  acfTT1.dcf  acfTT3.dcf  ccfFF1.dcf  ccfFF3.dcf  ccfFT1.dcf  ccfFT3.dcf  ccfTF1.dcf  ccfTF3.dcf  ccfTT1.dcf  ccfTT3.dcf  lcx_15  lcy_15
tests/test_data/test_lc4/: acfFF1.dcf  acfFF3.dcf  acfFT1.dcf  acfFT3.dcf  acfTF1.dcf  acfTF3.dcf  acfTT1.dcf  acfTT3.dcf  ccfFT1.dcf  ccfFT3.dcf  ccfTT1.dcf  ccfTT3.dcf  lc_i  lc_r
tests/test_data/test_lc5/: acfFF1.dcf  acfFF3.dcf  acfFT1.dcf  acfFT3.dcf  acfTF1.dcf  acfTF3.dcf  acfTT1.dcf  acfTT3.dcf  ccfFF1.dcf  ccfFF3.dcf  ccfFT1.dcf  ccfFT3.dcf  ccfTF1.dcf  ccfTT3.dcf  lcx_5000  lcy_5000
tests/test_data/test_lcs/: lcx10  lcx2  lcx3  lcx4  lcx5  lcx6  lcx7  lcx8  lcx9  lcy10  lcy2  lcy3  lcy4  lcy5  lcy6  lcy7  lcy8  lcy9
(+39 files in other folders)
