[tool.poetry]
name = "pyzdcf"
version = "1.0.0"
description = "Python module used for robust estimation of cross-corelation functions of sparse and unevenly sampled astronomical time-series. It emulates a Fortran program called ZDCF which is based on the Z-transformed Discrete Correlation Function algorithm (ZDCF, Alexander 1997)."
authors = ["Isidora Jankov <isidora_jankov@matf.bg.ac.rs>"]
readme = "README.md"
license = "MIT"

classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Intended Audience :: Science/Research",
"Topic :: Scientific/Engineering :: Astronomy" 
]

include = [
"LICENSE",
]

repository = "https://github.com/LSST-sersag/pyzdcf"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.16.5,<1.23.0"
pandas = "^1.3"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
