[tool.poetry]
name = "pyzdcf"
version = "1.0.3"
description = "Python module used for robust estimation of cross-corelation functions of sparse and unevenly sampled astronomical time-series. It emulates a Fortran program called ZDCF which is based on the Z-transformed Discrete Correlation Function algorithm (ZDCF, Alexander 1997)."
authors = ["Isidora Jankov <ijankov@proton.me>"]
readme = "README.md"
license = "MIT"

classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Intended Audience :: Science/Research",
"Topic :: Scientific/Engineering :: Astronomy" 
]

include = [
"LICENSE",
]

repository = "https://github.com/LSST-sersag/pyzdcf"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
numpy = "^1.21.6"
pandas = "^2.2.3"
scipy = "^1.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
